# kegtui

./: Cargo.toml  Justfile  README.md  deny.toml  download.sh
.github/workflows/: build.yaml  lint.yaml
core/: Cargo.toml
core/resource/credits/: crossterm.txt  textwrap.txt  toml.txt
core/src/: app.rs  app_config.rs  checks.rs  keg.rs  keg_plist.rs  main.rs  view.rs  views.rs
core/src/views/: kegs.rs  setup_wizard.rs
resource/credits/: plist.txt  serde.txt
src/: app.rs  keg.rs  keg_config.rs  keg_plist.rs  kegworks_plist.rs  lib.rs  main.rs  view.rs  views.rs
src/views/: credits.rs  keg_main.rs  kegs.rs  setup_wizard.rs
