[package]
name = "kegtui"
authors = ["Ethan Uppal"]
description = "Run Windows games/apps on macOS through wine"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-only"
readme = "README.md"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
strum_macros = "0.27.1"
strum = "0.27.1"
textwrap = { version = "0.16.2", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
plist = "1.7.1"
toml = "0.8.20"
