[workspace]
resolver = "3"
members = ["core"]

[workspace.package]
authors = ["Ethan Uppal"]
description = "Run Windows games/apps on macOS through wine"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-only"
readme = "README.md"

[workspace.dependencies]
color-eyre = "0.6.3"
crossterm = "=0.28.1"
ratatui = "0.29.0"
strum_macros = "0.27.1"
strum = "0.27.1"
textwrap = { version = "0.16.2", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
plist = "1.7.1"
toml = "0.9.2"

iced = "0.13.1"
#iced_term = "0.5.1"
iced_term = { git = "https://github.com/Harzu/iced_term.git", rev = "20669c290765dd18b134ea0e3479beac4b6987e6"}
core-foundation = "0.10.1"
dirs = "6.0.0"
font-kit = "0.14.3"

[package]
name = "wrapper"
description.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
iced.workspace = true
iced_term.workspace = true
core-foundation.workspace = true
dirs.workspace = true
font-kit.workspace = true

[package.metadata.bundle.bin.wrapper]
name = "kegtui"
identifier = "com.ethanuppal.kegtui"
resources = ["target/x86_64-apple-darwin/release/kegtui"]
copyright = "Copyright (C) Ethan Uppal. All rights reserved."
