[workspace]
resolver = "3"
members = ["core"]

[workspace.package]
authors = ["Ethan Uppal"]
description = "Run Windows games/apps on macOS through wine"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-only"
readme = "README.md"

[workspace.dependencies]
color-eyre = "0.6.3"
crossterm = "=0.28.1"
ratatui = "0.29.0"
strum_macros = "0.27.1"
strum = "0.27.1"
textwrap = { version = "0.16.2", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
plist = "1.7.1"
toml = "0.9.2"
tar = "0.4.44"
xz2 = "0.1.7"
copy_dir = "0.1.3"
walkdir = "2.5.0"
xattrs = "0.1.0"

iced = "0.14.0"
iced_term = "0.7.0"
core-foundation = "0.10.1"
dirs = "6.0.0"
font-kit = "0.14.3"
env-file-reader = "0.3.0"

[package]
name = "wrapper"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
iced.workspace = true
iced_term.workspace = true
core-foundation.workspace = true
dirs.workspace = true
font-kit.workspace = true
env-file-reader.workspace = true

[package.metadata.bundle.bin.wrapper]
name = "kegtui"
identifier = "com.ethanuppal.kegtui"
resources = ["target/x86_64-apple-darwin/release/kegtui"]
copyright = "Copyright (C) 2025 Ethan Uppal. All rights reserved."
