[package]
name = "kegtui"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
color-eyre.workspace = true
crossterm.workspace = true
ratatui.workspace = true
strum_macros.workspace = true
strum.workspace = true
textwrap.workspace = true
serde.workspace = true
plist.workspace = true
toml.workspace = true
tar.workspace = true
xz2.workspace = true
copy_dir.workspace = true
walkdir.workspace = true
xattrs.workspace = true
